Created separate file for reversal algorithm, etc.

--- a/Reversalator C++/Reversalator C++.vcxproj
+++ b/Reversalator C++/Reversalator C++.vcxproj
@@ -95,6 +95,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -151,9 +152,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Reversalator C++.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="ReverseMP3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ReverseMP3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
